# CentoRT

./: CMakeLists.txt  README.md
CentoB/: CMakeLists.txt
CentoB/Examples/Example1/: workspace.yaml
CentoB/Examples/Example1/projects/: projects.yaml
CentoB/Examples/Example1/projects/libs/net_go/: net_go.yaml
CentoB/src/: ArgsResolver.cpp  ArgsResolver.hpp  CompilationTarget.cpp  CompilationTarget.hpp  IToolChain.hpp  Log.cpp  Log.hpp  ManifestFile.cpp  ManifestFile.hpp  ManifestObjects.cpp  ManifestObjects.hpp  TargetObjectStack.cpp  TargetObjectStack.hpp  TargetObjects.cpp  TargetObjects.hpp  TargetStack.cpp  TargetStack.hpp  Utils.cpp  Utils.hpp  WildcardsShim.hpp  main.cpp
CentoB/src/Generators/: CargoGenerator.cpp  CargoGenerator.hpp  DotnetGenerator.cpp  DotnetGenerator.hpp  GoGenerator.cpp  GoGenerator.hpp  NinjaGenerator.cpp  NinjaGenerator.hpp
CentoB/src/Targets/: AutomationTarget.cpp  AutomationTarget.hpp  AutomationTargetObject.cpp  AutomationTargetObject.hpp  BuildTarget.cpp  BuildTarget.hpp  CppNinjaGccTarget.cpp  CppNinjaGccTarget.hpp  CppNinjaTarget.cpp  CppNinjaTarget.hpp  CppNinjaTargetObject.cpp  CppNinjaTargetObject.hpp  CppTargetObject.cpp  CppTargetObject.hpp  CsDotnetTarget.cpp  CsDotnetTarget.hpp  CsDotnetTargetObject.cpp  CsDotnetTargetObject.hpp  CsTargetObject.cpp  CsTargetObject.hpp  ExternalDependencyTarget.cpp  ExternalDependencyTarget.hpp  ExternalDependencyTargetObject.cpp  ExternalDependencyTargetObject.hpp  GoGoTarget.cpp  GoGoTarget.hpp  GoGoTargetObject.cpp  GoGoTargetObject.hpp  GoTargetObject.cpp  GoTargetObject.hpp  ITarget.hpp  ITargetObject.hpp  RsCargoTarget.cpp  RsCargoTarget.hpp  RsCargoTargetObject.cpp  RsCargoTargetObject.hpp  RsTargetObject.cpp  RsTargetObject.hpp  TargetObjectRegistry.cpp  TargetObjectRegistry.hpp  (+2 more)
CentoB/src/Tasks/: AutomationTask.cpp  AutomationTask.hpp  ITask.hpp
CentoB/src/Tasks/BuildTasks/: BuildCargoTask.cpp  BuildCargoTask.hpp  BuildDotnetTask.cpp  BuildDotnetTask.hpp  BuildGoTask.cpp  BuildGoTask.hpp  BuildNinjaTask.cpp  BuildNinjaTask.hpp
CentoB/src/Tasks/GenTasks/: GenCargoTask.cpp  GenCargoTask.hpp  GenCppBridgeIface.cpp  GenCppBridgeIface.hpp  GenCppBridgeImpl.cpp  GenCppBridgeImpl.hpp  GenCsBridgeIface.cpp  GenCsBridgeIface.hpp  GenCsBridgeImpl.cpp  GenCsBridgeImpl.hpp  GenDotnetTask.cpp  GenDotnetTask.hpp  GenGoBridgeIface.cpp  GenGoBridgeIface.hpp  GenGoBridgeImpl.cpp  GenGoBridgeImpl.hpp  GenGoTask.cpp  GenGoTask.hpp  GenNinjaGccTask.cpp  GenNinjaGccTask.hpp  GenNinjaTask.cpp  GenNinjaTask.hpp  GenRsBridgeIface.cpp  GenRsBridgeIface.hpp  GenRsBridgeImpl.cpp  GenRsBridgeImpl.hpp
CentoCommon/: CMakeLists.txt
CentoCommon/include/: CentoCommon.hpp  DllFile.hpp  Export.hpp  Singleton.hpp  Structs.hpp
CentoCommon/src/: DllFile.cpp  DllFileUnix.cpp  DllFileWin.cpp
CentoLib/: CMakeLists.txt
CentoLib/Examples/: CMakeLists.txt
CentoLib/Examples/Example1/: CMakeLists.txt
CentoLib/Examples/Example1/Exec/: CMakeLists.txt
CentoLib/Examples/Example1/Exec/src/: main.cpp
CentoLib/Examples/Example1/Lib1/: CMakeLists.txt
CentoLib/Examples/Example1/Lib1/src/: Export.h  dllmain.cpp
CentoLib/Examples/Example1/Lib2/: CMakeLists.txt
CentoLib/Examples/Example1/Lib2/src/: Export.h  dllmain.cpp
CentoLib/include/: LibCento.h  Register.h
CentoLib/inl/: RuntimeObject.hpp
CentoLib/src/: Register.cpp  RuntimeObject.cpp
CentoRT/: CMakeLists.txt
CentoRT/cmake/modules/: FindFFI.cmake
CentoRT/src/: Exports.cpp  Registry.cpp  Registry.hpp  dllmain.cpp
Examples/Example1/: workspace.yaml
Examples/Example1/common/: .env  .env.local  profiles.yaml  vars.yaml
Examples/Example1/projects/app_cs/: project.yaml
Examples/Example1/projects/core/: core.yaml
Examples/Example1/projects/core/app_cs/: app_cs.yaml
Examples/Example1/projects/core/core_cpp/: core_cpp.yaml
Examples/Example1/projects/core/core_cpp/int/: build.ninja
Examples/Example1/projects/core_cpp/: project.yaml
Examples/Example1/projects/libs/: libs.yaml
Examples/Example1/projects/libs/math_rs/: math_rs.yaml
Examples/Example1/projects/libs/net_go/: net_go.yaml
Examples/Example1/projects/math_rs/: project.yaml
Examples/Example1/projects/net_go/: project.yaml
docs/: CentoRT.md
